src/snapshots/avdl__reader__tests__alias_with_leading_digit_is_rejected.snap
---
source: src/reader.rs
expression: err
---
Error {
    msg: "parse `<input>`",
    source: ParseDiagnostic {
        src: NamedSource {
            name: "<input>",
            source: "<redacted>",
            language: None,
        ,
        span: SourceSpan {
            offset: SourceOffset(
                42,
            ),
            length: 1,
        },
        message: "invalid alias name: 123bad",
        label: None,
    },
}
