src/snapshots/avdl__reader__tests__alias_with_leading_digit_produces_warning.snap
---
source: src/reader.rs
expression: "render_diagnostic(&miette::Report::new(warning))"
---
  ! Alias "123bad" is not a valid Avro name. While any string is accepted to allow schema evolution to correct illegal names in old schemata, aliases should ideally be valid names.
   ,-[<input>:3:17]
 2 |             protocol P {
 3 |                 @aliases(["123bad"])
   :                 ^^^^^^^^^^|^^^^^^^^^
   :                           `-- non-standard alias name
 4 |                 record Foo { string name; }
   `----
