src/snapshots/avdl__reader__tests__annotation_on_message_with_named_return_type_is_rejected.snap
---
source: src/reader.rs
expression: render_diagnostic(&err)
---
  x parse `<input>`
  `-> Type references may not be annotated
   ,-[<input>:5:17]
 4 |                 record Foo { string name; }
 5 |                 @prop("x") Foo getFoo(string id);
   :                 ^^^^^^^^^^^^^^^^|^^^^^^^^^^^^^^^^
   :                                 `-- Type references may not be annotated
 6 |             }
   `----
