src/snapshots/avdl__reader__tests__annotation_on_type_reference_is_rejected.snap
---
source: src/reader.rs
expression: render_error(&err)
---
  x parse `<input>`
  `-> Type references may not be annotated
   ,-[<input>:6:21]
 5 |                 record R {
 6 |                     @foo("bar") MD5 hash = "0000000000000000";
   :                     ^^^^^^^|^^^^^^^
   :                            `-- Type references may not be annotated
 7 |                 }
   `----
