src/snapshots/avdl__reader__tests__default_int_string_is_rejected.snap
---
source: src/reader.rs
assertion_line: 4659
expression: render_diagnostic(&err)
---
  x parse `<input>`
  `-> Invalid default for field `count` in `R`: expected int, got string
   ,-[<input>:1:37]
 1 | protocol P { record R { int count = "hello"; } }
   :                                     ^^^|^^^
   :                                        `-- Invalid default for field `count` in `R`: expected int, got string
   `----
